# watchman-client

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_client.py
watchman_client/: __init__.py  __main__.py
