[tool.poetry]
name = "watchman-client"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]
readme = "README.md"
packages = [{include = "watchman_client"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
